# akusayangkamu

./: .gitignore  .replit  :memory:.session  :memory:.session-journal  README.md  bot.log.1  bot.py  bot_session.txt  config.example.py  config.py  create_bot_session.py  dummy_session_generator.py  generate_session.py  generate_session2.py  generate_session3.py  generate_telethon_session.py  pyproject.toml  pyrogram_bot.py  pyrogram_main.py  replit.nix  session.session  session.txt  session2.session  session2.txt  session3.txt  test_send_message.py  user_manager.py  username_bot.session  username_bot.session-journal  username_checker.py  username_checker_pyrogram.py  username_generator.py  username_rules.py  username_store.py
attached_assets/: config.example.yaml.txt  config.py  logging_config.py  main.py  main_optimized.py  telegram_bot.py  telegram_bot_optimized.py
